Add basic scroll snapping etc.

--- a/index.html
+++ b/index.html
@@ -3,4 +3,23 @@
 title: River
 layout: default
 ---
-<h1>River!</h1
+<div class="scroll-container">
+  <section>
+    <h2>River!</h2>
+  </section>
+  <section>
+    <h2>What is River?</h2>
+  </section>
+  <section>
+    <h2>You create data every day</h2>
+  </section>
+  <section>
+    <h2>River gives you control over data</h2>
+  </section>
+  <section>
+    <h2>Who is using your data?</h2>
+  </section>
+  <section>
+    <h2>Join River today.</h2>
+  </section>
+</div>
