--- a/index.html
+++ b/index.html
@@ -3,23 +3,242 @@
 title: River
 layout: default
 ---
+
 <div class="scroll-container">
-  <section>
-    <h2>River!</h2>
+  <section class="section" id="home-intro">
+    <div class="__body">
+      <p>In the online world, there are essentially two groups:</p>
+      <p>
+        Those who create data and those who sell it. River brings value to both.
+      </p>
+    </div>
+
+    <a
+      href="javascript:void"
+      onclick="river.nextSection(); return false;"
+      title="Next"
+      class="__breadcrumb"
+    >
+      <img src="{{ site.baseurl }}/assets/img/down-arrow.png" alt="Next" />
+      <p class="__teaser">Every Story Starts with Data.</p>
+    </a>
   </section>
-  <section>
-    <h2>What is River?</h2>
+
+  <section class="section" id="home-privacy-platform">
+    <div class="__body">
+      <p>A Privacy Platform you'll want to use.</p>
+      <p>
+        River is a data management platform that helps you regain control over
+        your data and gives app developers, advertisers, and organizations a
+        reliable route to compliance for the data they're acquiring about you.
+        You choose how, where, and who has access to your data.
+      </p>
+      <p>SIGN UP TO BECOME A PRIVACY PIONEER</p>
+    </div>
+
+    <a
+      href="javascript:void"
+      onclick="river.nextSection(); return false;"
+      title="Next"
+      class="__breadcrumb"
+    >
+      <img src="{{ site.baseurl }}/assets/img/down-arrow.png" alt="Next" />
+      <p class="__teaser">Data is Valuable.</p>
+    </a>
   </section>
-  <section>
-    <h2>You create data every day</h2>
+
+  <section class="section">
+    <div class="__body">
+      <p>You create $data$ every day.</p>
+      <p>
+        River gives you the ability to control where your data is being used,
+        when it's being used, and who has access to it. It's your data.
+      </p>
+    </div>
+
+    <a
+      href="javascript:void"
+      onclick="river.nextSection(); return false;"
+      title="Next"
+      class="__breadcrumb"
+    >
+      <img src="{{ site.baseurl }}/assets/img/down-arrow.png" alt="Next" />
+      <p class="__teaser">Make Data Work for You.</p>
+    </a>
   </section>
-  <section>
-    <h2>River gives you control over data</h2>
+
+  <section class="section">
+    <div class="__body">
+      <p>River gives you control over your data.</p>
+      <p>
+        Websites and businesses collect oceans of data about you and your
+        family, all day, every day. Information like how you slept last night,
+        how many pounds you gained over the holidays, where you like to shop,
+        which games you like to play, what shows you like to watch, how many
+        times you ordered pineapple on your pizza, and so much more. Every
+        single action in your day can be boiled down to a data point, and this
+        information is used by big corporations to nudge you towards buying
+        things you don't want and don't need. Companies pay big money for your
+        data, but they're getting far more than they need. River helps you get
+        paid for the info you're willing to sell while protecting the data you'd
+        like to keep private.
+      </p>
+      <p>If it's free, you're probably the product.</p>
+      <p>STOP GIVING AWAY YOUR DATA VOLUNTARILY SIGN UP FOR RIVER TODAY</p>
+    </div>
+
+    <a
+      href="javascript:void"
+      onclick="river.nextSection(); return false;"
+      title="Next"
+      class="__breadcrumb"
+    >
+      <img src="{{ site.baseurl }}/assets/img/down-arrow.png" alt="Next" />
+      <p class="__teaser">Every Story Starts with Data.</p>
+    </a>
   </section>
-  <section>
-    <h2>Who is using your data?</h2>
+
+  <section class="section">
+    <div class="__body">
+      <p>Who Owns Your Data?</p>
+      <p>
+        Through legislation in the US and around the world, it's been made
+        crystal clear to marketers and app-developers that you own your own
+        data. The problem is, you can't really do anything with it. Yet. River
+        gives you full control over which services have access to your data, and
+        for how long they can have it. And we can help enterprises and
+        organizations quickly and easily comply with US and global laws designed
+        to protect your privacy. Our business model works by giving you control
+        over your data and by providing a platform that makes compliance
+        accessible for developers and marketers.
+      </p>
+
+      <p>Dive into Your Data.</p>
+    </div>
+
+    <a
+      href="javascript:void"
+      onclick="river.nextSection(); return false;"
+      title="Next"
+      class="__breadcrumb"
+    >
+      <img src="{{ site.baseurl }}/assets/img/down-arrow.png" alt="Next" />
+      <p class="__teaser">Every Story Starts with Data.</p>
+    </a>
   </section>
-  <section>
-    <h2>Join River today.</h2>
+
+  <section class="section">
+    <div class="__body">
+      <p>Who is using your data?</p>
+      <p>WHO'S TRACKING YOUR NOW?</p>
+      <p>Assume Everyone is tracking you.</p>
+      <p>
+        Social media channels, search engines, websites, apps, games, personal
+        assistants, sensors, smartphones, smart cars, smart TVs, and smart
+        anything.
+      </p>
+
+      <p>HOW DO THEY TRACK YOU?</p>
+      <p>Beyond Cookies</p>
+      <p>
+        Super-cookies, embedded scripts, fingerprinters, cross-device tracking,
+        click-throughs, web beacons, favicons - and more, all silently stealing
+        your data.
+      </p>
+
+      <p>WHAT CAN I CONTROL?</p>
+      <p>You Own Your Data</p>
+      <p>
+        With River, you decide which services can have access to your data, as
+        well as what kind of access they can have. You can rent, sell, or lease
+        the information to them or deny them altogether. The decision is yours.
+      </p>
+    </div>
+
+    <a
+      href="javascript:void"
+      onclick="river.nextSection(); return false;"
+      title="Next"
+      class="__breadcrumb"
+    >
+      <img src="{{ site.baseurl }}/assets/img/down-arrow.png" alt="Next" />
+      <p class="__teaser">Dive into River.</p>
+    </a>
+  </section>
+
+  <section class="section">
+    <div class="__body">
+      <p>Data Untapped.</p>
+      <p>
+        A high-level explanation of how River isolates your data: giving you the
+        power to control the info you're sharing while enabling developers to be
+        compliant in the apps and tools they're creating.
+      </p>
+    </div>
+
+    <a
+      href="javascript:void"
+      onclick="river.nextSection(); return false;"
+      title="Next"
+      class="__breadcrumb"
+    >
+      <img src="{{ site.baseurl }}/assets/img/down-arrow.png" alt="Next" />
+      <p class="__teaser">Dive into River.</p>
+    </a>
+  </section>
+
+  <section class="section">
+    <div class="__body">
+      <p>How does River work?</p>
+      <p>A firewall for your data</p>
+      <p>
+        You choose what data you'd like to send to market, including how long it
+        will be available for, which industries can access your data, and what
+        it can be used for.
+      </p>
+      <p>Your digital agent</p>
+      <p>
+        We represent you in the online space, negotiating lucrative deals to
+        maximize the value of your data, so you can get paid for your unique
+        insights.
+      </p>
+      <p>Future plans</p>
+      <p>
+        Everyone creates data, but ont everyone wants to share it, so in the
+        future, we'll offer a premium service that allows you to access the
+        services you want without sharing your information.
+      </p>
+    </div>
+
+    <a
+      href="javascript:void"
+      onclick="river.nextSection(); return false;"
+      title="Next"
+      class="__breadcrumb"
+    >
+      <img src="{{ site.baseurl }}/assets/img/down-arrow.png" alt="Next" />
+      <p class="__teaser">Data for Profit.</p>
+    </a>
+  </section>
+
+  <section class="section">
+    <div class="__body">
+      <p>The Business of Data</p>
+
+      <p>
+        How does River profit from your data? Here's your fully transparent
+        process, designed to protect you and your digital assets.
+      </p>
+    </div>
+
+    <a
+      href="javascript:void"
+      onclick="river.nextSection(); return false;"
+      title="Next"
+      class="__breadcrumb"
+    >
+      <img src="{{ site.baseurl }}/assets/img/down-arrow.png" alt="Next" />
+      <p class="__teaser">Resources</p>
+    </a>
   </section>
 </div>
