--- a/index.html
+++ b/index.html
@@ -241,4 +241,32 @@ layout: default
       <p class="__teaser">Resources</p>
     </a>
   </section>
+
+  <section class="section">
+    <div class="__body">
+      <p>Resources</p>
+
+      <p>GLOSSARY</p>
+      <p>Technical terms and ideas to expand your understanding.</p>
+      <p>INDEPENDENT SOURCES</p>
+      <p>White papers, articles, and information from unbiased sources.</p>
+      <p>FAQ</p>
+      <p>You have questions. We have answers.</p>
+      <p>Ready to start getting paid for your data?</p>
+      <p>Stay informed about the updates and activities at River.</p>
+      <p>It's your data. It's your choice.</p>
+      <p>Sign up to be an early adopter</p>
+      <p>Still have questions? Let's chat.</p>
+      <p>LEGALS</p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+        mollit anim id est laborum.
+      </p>
+    </div>
+  </section>
 </div>
