Style first page.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@ layout: default
 <div class="scroll-container">
   <section class="section" id="home-intro">
     <div class="__body">
-      <p>In the online world, there are essentially two groups:</p>
-      <p>
-        Those who create data and those who sell it. River brings value to both.
+      <p class="p1">In the online world, there are essentially two groups:</h4>
+      <p class="p2">
+        Those who create data 
+        <br />
+        and those who sell it.
+        <br />
+        River brings value to both.
       </p>
     </div>
 
@@ -19,8 +23,8 @@ layout: default
       title="Next"
       class="__breadcrumb"
     >
-      <img src="{{ site.baseurl }}/assets/img/down-arrow.png" alt="Next" />
-      <p class="__teaser">Every Story Starts with Data.</p>
+      <img class="__img" src="{{ site.baseurl }}/assets/img/down-arrow.png" alt="Next" />
+      <p class="p3 __teaser">Every Story <br /> Starts with Data.</p>
     </a>
   </section>
 
@@ -42,7 +46,7 @@ layout: default
       title="Next"
       class="__breadcrumb"
     >
-      <img src="{{ site.baseurl }}/assets/img/down-arrow.png" alt="Next" />
+      <img class="__img" src="{{ site.baseurl }}/assets/img/down-arrow.png" alt="Next" />
       <p class="__teaser">Data is Valuable.</p>
     </a>
   </section>
@@ -62,7 +66,7 @@ layout: default
       title="Next"
       class="__breadcrumb"
     >
-      <img src="{{ site.baseurl }}/assets/img/down-arrow.png" alt="Next" />
+      <img class="__img" src="{{ site.baseurl }}/assets/img/down-arrow.png" alt="Next" />
       <p class="__teaser">Make Data Work for You.</p>
     </a>
   </section>
@@ -93,7 +97,7 @@ layout: default
       title="Next"
       class="__breadcrumb"
     >
-      <img src="{{ site.baseurl }}/assets/img/down-arrow.png" alt="Next" />
+      <img class="__img" src="{{ site.baseurl }}/assets/img/down-arrow.png" alt="Next" />
       <p class="__teaser">Every Story Starts with Data.</p>
     </a>
   </section>
@@ -122,7 +126,7 @@ layout: default
       title="Next"
       class="__breadcrumb"
     >
-      <img src="{{ site.baseurl }}/assets/img/down-arrow.png" alt="Next" />
+      <img class="__img" src="{{ site.baseurl }}/assets/img/down-arrow.png" alt="Next" />
       <p class="__teaser">Every Story Starts with Data.</p>
     </a>
   </section>
@@ -161,7 +165,7 @@ layout: default
       title="Next"
       class="__breadcrumb"
     >
-      <img src="{{ site.baseurl }}/assets/img/down-arrow.png" alt="Next" />
+      <img class="__img" src="{{ site.baseurl }}/assets/img/down-arrow.png" alt="Next" />
       <p class="__teaser">Dive into River.</p>
     </a>
   </section>
@@ -182,7 +186,7 @@ layout: default
       title="Next"
       class="__breadcrumb"
     >
-      <img src="{{ site.baseurl }}/assets/img/down-arrow.png" alt="Next" />
+      <img class="__img" src="{{ site.baseurl }}/assets/img/down-arrow.png" alt="Next" />
       <p class="__teaser">Dive into River.</p>
     </a>
   </section>
@@ -216,7 +220,7 @@ layout: default
       title="Next"
       class="__breadcrumb"
     >
-      <img src="{{ site.baseurl }}/assets/img/down-arrow.png" alt="Next" />
+      <img class="__img" src="{{ site.baseurl }}/assets/img/down-arrow.png" alt="Next" />
       <p class="__teaser">Data for Profit.</p>
     </a>
   </section>
@@ -237,7 +241,7 @@ layout: default
       title="Next"
       class="__breadcrumb"
     >
-      <img src="{{ site.baseurl }}/assets/img/down-arrow.png" alt="Next" />
+      <img class="__img" src="{{ site.baseurl }}/assets/img/down-arrow.png" alt="Next" />
       <p class="__teaser">Resources</p>
     </a>
   </section>
