--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ---
-# index.markdown
+# index.html
 title: River
 layout: default
 ---
 
 <div class="scroll-container">
-  <section class="section" id="home-intro">
+  <section class="section --home-intro" id="home-intro">
     <div class="__body">
       <p class="p1">In the online world, there are essentially two groups:</h4>
       <p class="p2">
@@ -17,21 +17,13 @@ layout: default
       </p>
     </div>
 
-    <a
-      href="javascript:void"
-      onclick="river.nextSection(); return false;"
-      title="Next"
-      class="__breadcrumb"
-    >
-      <img class="__img" src="{{ site.baseurl }}/assets/img/down-arrow.png" alt="Next" />
-      <p class="p3 __teaser">Every Story <br /> Starts with Data.</p>
-    </a>
+    {% include breadcrumb.html teaser="Every Story <br /> Starts with Data." %}
   </section>
 
-  <section class="section" id="home-privacy-platform">
+  <section class="section --home-privacy-platform" id="home-privacy-platform">
     <div class="__body">
-      <p>A Privacy Platform you'll want to use.</p>
-      <p>
+      <p class="p2">A Privacy Platform you'll want to use.</p>
+      <p class="p1">
         River is a data management platform that helps you regain control over
         your data and gives app developers, advertisers, and organizations a
         reliable route to compliance for the data they're acquiring about you.
@@ -40,41 +32,25 @@ layout: default
       <p>SIGN UP TO BECOME A PRIVACY PIONEER</p>
     </div>
 
-    <a
-      href="javascript:void"
-      onclick="river.nextSection(); return false;"
-      title="Next"
-      class="__breadcrumb"
-    >
-      <img class="__img" src="{{ site.baseurl }}/assets/img/down-arrow.png" alt="Next" />
-      <p class="__teaser">Data is Valuable.</p>
-    </a>
+    {% include breadcrumb.html teaser="Data is Valuable." %}
   </section>
 
-  <section class="section">
+  <section class="section --home-video-1" id="home-video-1">
     <div class="__body">
-      <p>You create $data$ every day.</p>
-      <p>
+      <p class="p2">You create $data$ every day.</p>
+      <p class="p1">
         River gives you the ability to control where your data is being used,
         when it's being used, and who has access to it. It's your data.
       </p>
     </div>
 
-    <a
-      href="javascript:void"
-      onclick="river.nextSection(); return false;"
-      title="Next"
-      class="__breadcrumb"
-    >
-      <img class="__img" src="{{ site.baseurl }}/assets/img/down-arrow.png" alt="Next" />
-      <p class="__teaser">Make Data Work for You.</p>
-    </a>
+    {% include breadcrumb.html teaser="Make Data Work for You." %}
   </section>
 
   <section class="section">
     <div class="__body">
-      <p>River gives you control over your data.</p>
-      <p>
+      <p class="p2">River gives you control over your data.</p>
+      <p class="p1">
         Websites and businesses collect oceans of data about you and your
         family, all day, every day. Information like how you slept last night,
         how many pounds you gained over the holidays, where you like to shop,
@@ -91,25 +67,17 @@ layout: default
       <p>STOP GIVING AWAY YOUR DATA VOLUNTARILY SIGN UP FOR RIVER TODAY</p>
     </div>
 
-    <a
-      href="javascript:void"
-      onclick="river.nextSection(); return false;"
-      title="Next"
-      class="__breadcrumb"
-    >
-      <img class="__img" src="{{ site.baseurl }}/assets/img/down-arrow.png" alt="Next" />
-      <p class="__teaser">Every Story Starts with Data.</p>
-    </a>
+    {% include breadcrumb.html teaser="Dive into Your Data." %}
   </section>
 
   <section class="section">
     <div class="__body">
-      <p>Who Owns Your Data?</p>
-      <p>
+      <p class="p2">Who Owns Your Data?</p>
+      <p class="p1">
         Through legislation in the US and around the world, it's been made
         crystal clear to marketers and app-developers that you own your own
-        data. The problem is, you can't really do anything with it. Yet. River
-        gives you full control over which services have access to your data, and
+        data. The problem is, you can't really do anything with it. Yet. <br />
+        River gives you full control over which services have access to your data, and
         for how long they can have it. And we can help enterprises and
         organizations quickly and easily comply with US and global laws designed
         to protect your privacy. Our business model works by giving you control
@@ -117,63 +85,66 @@ layout: default
         accessible for developers and marketers.
       </p>
 
-      <p>Dive into Your Data.</p>
+      <p class="p4 --yellow">It's your data. River helps you manage it.</p>
     </div>
 
-    <a
-      href="javascript:void"
-      onclick="river.nextSection(); return false;"
-      title="Next"
-      class="__breadcrumb"
-    >
-      <img class="__img" src="{{ site.baseurl }}/assets/img/down-arrow.png" alt="Next" />
-      <p class="__teaser">Every Story Starts with Data.</p>
-    </a>
+    {% include breadcrumb.html teaser="The Confluence of Data." %}
   </section>
 
   <section class="section">
     <div class="__body">
-      <p>Who is using your data?</p>
-      <p>WHO'S TRACKING YOUR NOW?</p>
-      <p>Assume Everyone is tracking you.</p>
-      <p>
+      <p class="p2">Who is using your data?</p>
+      <p class="p3 --yellow">WHO'S TRACKING YOUR NOW?</p>
+      <p class="p1 --yellow">Assume Everyone is tracking you.</p>
+      <p class="p1">
         Social media channels, search engines, websites, apps, games, personal
         assistants, sensors, smartphones, smart cars, smart TVs, and smart
         anything.
       </p>
 
-      <p>HOW DO THEY TRACK YOU?</p>
-      <p>Beyond Cookies</p>
-      <p>
+      <p class="p3 --yellow">HOW DO THEY TRACK YOU?</p>
+      <p class="p1 --yellow">Beyond Cookies</p>
+      <p class="p1">
         Super-cookies, embedded scripts, fingerprinters, cross-device tracking,
         click-throughs, web beacons, favicons - and more, all silently stealing
         your data.
       </p>
 
-      <p>WHAT CAN I CONTROL?</p>
-      <p>You Own Your Data</p>
-      <p>
+      <p class="p3 --yellow">WHAT CAN I CONTROL?</p>
+      <p class="p1 --yellow">You Own Your Data</p>
+      <p class="p1">
         With River, you decide which services can have access to your data, as
         well as what kind of access they can have. You can rent, sell, or lease
         the information to them or deny them altogether. The decision is yours.
       </p>
     </div>
 
-    <a
-      href="javascript:void"
-      onclick="river.nextSection(); return false;"
-      title="Next"
-      class="__breadcrumb"
-    >
-      <img class="__img" src="{{ site.baseurl }}/assets/img/down-arrow.png" alt="Next" />
-      <p class="__teaser">Dive into River.</p>
-    </a>
+    {% include breadcrumb.html teaser="Dive into River." %}
   </section>
 
   <section class="section">
     <div class="__body">
-      <p>Data Untapped.</p>
-      <p>
+      <p class="p2">Who is using your data?</p>
+      <p class="p3 --yellow">WHAT CAN I DO WITH MY DATA?</p>
+      <p class="p1 --yellow">You Have Options</p>
+      <p class="p1">
+        Store it, sanitize it, share it, secure it, or sell it, then confidently delete your account. Or not.
+      </p>
+
+      <p class="p1 --yellow">WAIT - I OWN MY DATA? <br /> WHAT DOES THAT MEAN?</p>
+      <p class="p1 --yellow">100% Yours</p>
+      <p class="p1">
+        The GDPR in the EU and the CCPA in California are two examples of privacy legislation, and according to Gartner, 65% of the global population will enjoy protection of their personal data through some form of regulation.
+      </p>
+    </div>
+
+    {% include breadcrumb.html teaser="Dive into River." %}
+  </section>
+
+  <section class="section">
+    <div class="__body">
+      <p class="p2">Data Untapped.</p>
+      <p class="p1">
         A high-level explanation of how River isolates your data: giving you the
         power to control the info you're sharing while enabling developers to be
         compliant in the apps and tools they're creating.
@@ -193,76 +164,60 @@ layout: default
 
   <section class="section">
     <div class="__body">
-      <p>How does River work?</p>
-      <p>A firewall for your data</p>
-      <p>
+      <p class="p2">How does River work?</p>
+      <p class="p3 --green">A firewall for your data</p>
+      <p class="p1">
         You choose what data you'd like to send to market, including how long it
         will be available for, which industries can access your data, and what
         it can be used for.
       </p>
-      <p>Your digital agent</p>
-      <p>
+      <p class="p3 --yellow">Your digital agent</p>
+      <p class="p1">
         We represent you in the online space, negotiating lucrative deals to
         maximize the value of your data, so you can get paid for your unique
         insights.
       </p>
-      <p>Future plans</p>
-      <p>
+      <p class="p3 --orange">Future plans</p>
+      <p class="p1">
         Everyone creates data, but ont everyone wants to share it, so in the
         future, we'll offer a premium service that allows you to access the
         services you want without sharing your information.
       </p>
     </div>
 
-    <a
-      href="javascript:void"
-      onclick="river.nextSection(); return false;"
-      title="Next"
-      class="__breadcrumb"
-    >
-      <img class="__img" src="{{ site.baseurl }}/assets/img/down-arrow.png" alt="Next" />
-      <p class="__teaser">Data for Profit.</p>
-    </a>
+    {% include breadcrumb.html teaser="Data for Profit." %}
   </section>
 
   <section class="section">
     <div class="__body">
-      <p>The Business of Data</p>
+      <p class="p2">The Business of Data</p>
 
-      <p>
+      <p class="p1">
         How does River profit from your data? Here's your fully transparent
         process, designed to protect you and your digital assets.
       </p>
     </div>
 
-    <a
-      href="javascript:void"
-      onclick="river.nextSection(); return false;"
-      title="Next"
-      class="__breadcrumb"
-    >
-      <img class="__img" src="{{ site.baseurl }}/assets/img/down-arrow.png" alt="Next" />
-      <p class="__teaser">Resources</p>
-    </a>
+    {% include breadcrumb.html teaser="Resources" %}
   </section>
 
   <section class="section">
     <div class="__body">
-      <p>Resources</p>
+      <p class="p3 --yellow">Resources</p>
 
-      <p>GLOSSARY</p>
-      <p>Technical terms and ideas to expand your understanding.</p>
-      <p>INDEPENDENT SOURCES</p>
-      <p>White papers, articles, and information from unbiased sources.</p>
-      <p>FAQ</p>
-      <p>You have questions. We have answers.</p>
-      <p>Ready to start getting paid for your data?</p>
-      <p>Stay informed about the updates and activities at River.</p>
-      <p>It's your data. It's your choice.</p>
+      <p class="p1">GLOSSARY</p>
+      <p class="p1">Technical terms and ideas to expand your understanding.</p>
+      <p class="p1">INDEPENDENT SOURCES</p>
+      <p class="p1">White papers, articles, and information from unbiased sources.</p>
+      <p class="p1">FAQ</p>
+      <p class="p1">You have questions. We have answers.</p>
+      <p class="p1">Ready to start getting paid for your data?</p>
+      <p class="p1">Stay informed about the updates and activities at River.</p>
+      <p class="p1">It's your data. It's your choice.</p>
       <p>Sign up to be an early adopter</p>
-      <p>Still have questions? Let's chat.</p>
-      <p>LEGALS</p>
-      <p>
+      <p class="p1">Still have questions? Let's chat.</p>
+      <p class="p3 --yellow">LEGALS</p>
+      <p class="p1">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
         veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
