--- a/index.html
+++ b/index.html
@@ -22,14 +22,16 @@ layout: default
 
   <section class="section --home-privacy-platform" id="home-privacy-platform">
     <div class="__body">
-      <p class="p2">A Privacy Platform you'll want to use.</p>
+      <p class="p2">A Privacy Platform You'll Want to Use.</p>
       <p class="p1">
         River is a data management platform that helps you regain control over
         your data and gives app developers, advertisers, and organizations a
         reliable route to compliance for the data they're acquiring about you.
         You choose how, where, and who has access to your data.
       </p>
-      <p>SIGN UP TO BECOME A PRIVACY PIONEER</p>
+      <div class="button-container">
+        <p class="button --red-outline --center">Sign up to become a privacy pioneer</p>
+      </div>
     </div>
 
     {% include breadcrumb.html teaser="Data is Valuable." %}
