Better section visibility tracking.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ layout: default
     {% include breadcrumb.html teaser="Make Data Work for You." %}
   </section>
 
-  <section class="section">
+  <section class="section" id="home-river-gives-you-control">
     <div class="__body">
       <p class="p2">River gives you control over your data.</p>
       <p class="p1">
@@ -71,7 +71,7 @@ layout: default
     {% include breadcrumb.html teaser="Dive into Your Data." %}
   </section>
 
-  <section class="section">
+  <section class="section" id="home-who-owns-your-data">
     <div class="__body">
       <p class="p2">Who Owns Your Data?</p>
       <p class="p1">
@@ -92,7 +92,7 @@ layout: default
     {% include breadcrumb.html teaser="The Confluence of Data." %}
   </section>
 
-  <section class="section">
+  <section class="section" id="home-who-is-using-your-data">
     <div class="__body">
       <p class="p2">Who is using your data?</p>
       <p class="p3 --yellow">WHO'S TRACKING YOUR NOW?</p>
@@ -123,7 +123,7 @@ layout: default
     {% include breadcrumb.html teaser="Dive into River." %}
   </section>
 
-  <section class="section">
+  <section class="section" id="home-who-is-using-your-data-2">
     <div class="__body">
       <p class="p2">Who is using your data?</p>
       <p class="p3 --yellow">WHAT CAN I DO WITH MY DATA?</p>
@@ -142,7 +142,7 @@ layout: default
     {% include breadcrumb.html teaser="Dive into River." %}
   </section>
 
-  <section class="section">
+  <section class="section" id="home-data-untapped">
     <div class="__body">
       <p class="p2">Data Untapped.</p>
       <p class="p1">
@@ -152,18 +152,10 @@ layout: default
       </p>
     </div>
 
-    <a
-      href="javascript:void"
-      onclick="river.nextSection(); return false;"
-      title="Next"
-      class="__breadcrumb"
-    >
-      <img class="__img" src="{{ site.baseurl }}/assets/img/down-arrow.png" alt="Next" />
-      <p class="__teaser">Dive into River.</p>
-    </a>
+    {% include breadcrumb.html teaser="Dive into River." %}
   </section>
 
-  <section class="section">
+  <section class="section" id="home-how-does-river-work">
     <div class="__body">
       <p class="p2">How does River work?</p>
       <p class="p3 --green">A firewall for your data</p>
@@ -189,7 +181,7 @@ layout: default
     {% include breadcrumb.html teaser="Data for Profit." %}
   </section>
 
-  <section class="section">
+  <section class="section" id="home-business-of-data">
     <div class="__body">
       <p class="p2">The Business of Data</p>
 
@@ -202,7 +194,7 @@ layout: default
     {% include breadcrumb.html teaser="Resources" %}
   </section>
 
-  <section class="section">
+  <section class="section" id="home-resources">
     <div class="__body">
       <p class="p3 --yellow">Resources</p>
 
