Add play button to slide 5

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@ layout: default
       <p class="p1">In the online world, there are essentially two groups:</h4>
       <p class="p2">
         Those who create data 
-        <br />
         and those who sell it.
-        <br />
         River brings value to both.
       </p>
     </div>
@@ -38,11 +36,14 @@ layout: default
 
   <section class="section --home-video-1" id="home-video-1">
     <div class="__body">
-      <p class="p2">You create $data$ every day.</p>
-      <p class="p1">
-        River gives you the ability to control where your data is being used,
-        when it's being used, and who has access to it. It's your data.
-      </p>
+      <button class="play-video-button __video-button"></button>
+      <div>
+        <p class="p2">You create $data$ every day.</p>
+        <p class="p1">
+          River gives you the ability to control where your data is being used,
+          when it's being used, and who has access to it. It's your data.
+        </p>
+      </div>
     </div>
 
     {% include breadcrumb.html teaser="Make Data <br /> Work for You." %}
