Rough styling for all pages.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ layout: default
     {% include breadcrumb.html teaser="Make Data <br /> Work for You." %}
   </section>
 
-  <section class="section" id="home-river-gives-you-control">
+  <section class="section --home-river-gives-you-control" id="home-river-gives-you-control">
     <div class="__body">
       <p class="p2">River gives you control over your data.</p>
       <div class="col2">
@@ -74,7 +74,7 @@ layout: default
     {% include breadcrumb.html teaser="Dive into <br /> Your Data." %}
   </section>
 
-  <section class="section" id="home-who-owns-your-data">
+  <section class="section --home-who-owns-your-data" id="home-who-owns-your-data">
     <div class="__body">
       <p class="p2">Who Owns Your Data?</p>
       <div class="col2">
@@ -97,7 +97,7 @@ layout: default
     {% include breadcrumb.html teaser="The Confluence <br /> of Data." %}
   </section>
 
-  <section class="section" id="home-who-is-using-your-data">
+  <section class="section --home-who-is-using-your-data" id="home-who-is-using-your-data">
     <div class="__body">
       <p class="p2">Who is using your data?</p>
 
@@ -137,7 +137,7 @@ layout: default
     {% include breadcrumb.html teaser="Dive <br /> into River." %}
   </section>
 
-  <section class="section" id="home-who-is-using-your-data-2">
+  <section class="section --home-who-is-using-your-data-2" id="home-who-is-using-your-data-2">
     <div class="__body">
       <p class="p2">Who is using your data?</p>
 
@@ -165,20 +165,23 @@ layout: default
     {% include breadcrumb.html teaser="Dive <br /> into River." %}
   </section>
 
-  <section class="section" id="home-data-untapped">
+  <section class="section --home-data-untapped" id="home-data-untapped">
     <div class="__body">
-      <p class="p2">Data Untapped.</p>
-      <p class="p1">
-        A high-level explanation of how River isolates your data: giving you the
-        power to control the info you're sharing while enabling developers to be
-        compliant in the apps and tools they're creating.
-      </p>
+      <button class="play-video-button __video-button"></button>
+      <div>
+        <p class="p2">Data Untapped.</p>
+        <p class="p1">
+          A high-level explanation of how River isolates your data: giving you the
+          power to control the info you're sharing while enabling developers to be
+          compliant in the apps and tools they're creating.
+        </p>
+      </div>
     </div>
 
     {% include breadcrumb.html teaser="Dive <br /> into River." %}
   </section>
 
-  <section class="section" id="home-how-does-river-work">
+  <section class="section --home-how-does-river-work" id="home-how-does-river-work">
     <div class="__body">
       <p class="p2">How does River work?</p>
       <div class="col3">
@@ -212,20 +215,22 @@ layout: default
     {% include breadcrumb.html teaser="Data <br /> for Profit." %}
   </section>
 
-  <section class="section" id="home-business-of-data">
+  <section class="section --home-business-of-data" id="home-business-of-data">
     <div class="__body">
-      <p class="p2">The Business of Data</p>
-
-      <p class="p1">
-        How does River profit from your data? Here's your fully transparent
-        process, designed to protect you and your digital assets.
-      </p>
+      <button class="play-video-button __video-button"></button>
+      <div>
+        <p class="p2">The Business of Data</p>
+        <p class="p1">
+          How does River profit from your data? Here's your fully transparent
+          process, designed to protect you and your digital assets.
+        </p>
+      </div>
     </div>
 
     {% include breadcrumb.html teaser="Resources" %}
   </section>
 
-  <section class="section" id="home-resources">
+  <section class="section --home-resources" id="home-resources">
     <div class="__body">
       <div class="col2">
         <div class="__card">
