Add breakpoint debugger

--- a/index.html
+++ b/index.html
@@ -263,3 +263,8 @@ layout: default
     </div>
   </section>
 </div>
+
+<div id="bp-debugger" class="bp-debugger">
+  <p class="__bp"></p>
+  <p class="__w">1080px</p>
+</div>
