--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ layout: default
     <div class="__body">
       <p class="p1">In the online world, there are essentially two groups:</h4>
       <p class="p2">
-        Those who create data 
-        and those who sell it.
+        Those who create data <br />
+        and those who sell it. <br />
         River brings value to both.
       </p>
     </div>
